[tool.poetry]
name = "chitai_gorod"
version = "0.1.0"
description = ""
authors = ["inessa-krapivina <inessa.krapivina20@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
